# kr-2025-3sem-s

./: CMakeLists.txt  README.md  main.cpp
domain/: Documentation.cpp  Documentation.h  Project.cpp  Project.h
repositories/: DocumentationRepository.h  DocumentationRepositoryImp.cpp  DocumentationRepositoryImp.h  ProjectRepository.h  ProjectRepositoryImp.cpp  ProjectRepositoryImp.h
services/: DocumentationService.cpp  DocumentationService.h  ProjectService.cpp  ProjectService.h
state/: State.cpp  State.h
ui/components/: DocumentationList.cpp  DocumentationList.h  Header.cpp  Header.h
ui/frames/: MainFrame.cpp  MainFrame.h  ProjectFrame.cpp  ProjectFrame.h
ui/pages/: DocumentationForm.cpp  DocumentationForm.h  DocumentationPanel.cpp  DocumentationPanel.h  MainPanel.cpp  MainPanel.h  ProjectForm.cpp  ProjectForm.h
